force-app/main/default/objects/Lead/fields/Advice_Wanted__c.field-meta.xml
<CustomField>
    <fullName>Advice_Wanted__c</fullName>
    <description>Want to get advice</description>
    <label>Advice Wanted</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>