force-app/main/default/objects/Lead/fields/Fund_Type__c.field-meta.xml
<CustomField>
    <fullName>Fund_Type__c</fullName>
    <label>Fund Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Conservative</fullName>
            </value>
            <value>
                <fullName>Balanced</fullName>
            </value>
            <value>
                <fullName>Growth</fullName>
            </value>
            <value>
                <fullName>Split</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>