force-app/main/default/objects/Lead/fields/Kiwi_Saver_Contribution__c.field-meta.xml
<CustomField>
    <fullName>Kiwi_Saver_Contribution__c</fullName>
    <label>KiwiSaver Contribution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>4%</fullName>
            </value>
            <value>
                <fullName>6%</fullName>
            </value>
            <value>
                <fullName>8%</fullName>
            </value>
            <value>
                <fullName>10%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>