force-app/main/default/objects/Lead/fields/KiwiSaver_Provider__c.field-meta.xml
<CustomField>
    <fullName>KiwiSaver_Provider__c</fullName>
    <description>Kiwi Saver Provider</description>
    <label>KiwiSaver Provider</label>
    <length>20</length>
    <type>Text</type>
</CustomField>