force-app/main/default/objects/Lead/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Record of the conversation had with the lead</description>
    <label>Notes</label>
    <length>400</length>
    <type>LongTextArea</type>
</CustomField>